@@ -658,6 +658,14 @@ static Atom wm_move_resize_atom;
 static Atom restack_window_atom;
 static Atom select_window_atom;
 
+static Atom toolkit_action_atom;
+static Atom toolkit_action_main_menu_atom;
+static Atom toolkit_action_run_dialog_atom;
+
+static Atom panel_action_atom;
+static Atom panel_action_main_menu_atom;
+static Atom panel_action_run_dialog_atom;
+
 #define C(name) { 0, XC_ ## name }
 
 static struct _cursor {
@@ -3578,6 +3586,27 @@ bottom_right_event (WnckWindow *win,
 	move_resize_window (win, WM_MOVERESIZE_SIZE_BOTTOMRIGHT, xevent);
 }
 
+static void
+panel_action (Display *xdisplay,
+	      Window  root,
+	      Atom    panel_action,
+	      Time    event_time)
+{
+    XEvent ev;
+
+    ev.type		    = ClientMessage;
+    ev.xclient.window	    = root;
+    ev.xclient.message_type = panel_action_atom;
+    ev.xclient.format	    = 32;
+    ev.xclient.data.l[0]    = panel_action;
+    ev.xclient.data.l[1]    = event_time;
+    ev.xclient.data.l[2]    = 0;
+    ev.xclient.data.l[3]    = 0;
+    ev.xclient.data.l[4]    = 0;
+
+    XSendEvent (xdisplay, root, FALSE, StructureNotifyMask, &ev);
+}
+
 static GdkFilterReturn
 event_filter_func (GdkXEvent *gdkxevent,
 		   GdkEvent  *event,
@@ -3646,6 +3675,26 @@ event_filter_func (GdkXEvent *gdkxevent,
     case DestroyNotify:
 	g_hash_table_remove (frame_table,
 			     GINT_TO_POINTER (xevent->xproperty.window));
+	break;
+    case ClientMessage:
+	if (xevent->xclient.message_type == toolkit_action_atom)
+	{
+	    long action;
+
+	    action = xevent->xclient.data.l[0];
+	    if (action == toolkit_action_main_menu_atom)
+	    {
+		panel_action (xdisplay, xevent->xclient.window,
+			      panel_action_main_menu_atom,
+			      xevent->xclient.data.l[1]);
+	    }
+	    else if (action == toolkit_action_run_dialog_atom)
+	    {
+		panel_action (xdisplay, xevent->xclient.window,
+			      panel_action_run_dialog_atom,
+			      xevent->xclient.data.l[1]);
+	    }
+	}
     default:
 	break;
     }
@@ -4094,6 +4143,20 @@ main (int argc, char *argv[])
     restack_window_atom = XInternAtom (xdisplay, "_NET_RESTACK_WINDOW", FALSE);
     select_window_atom	= XInternAtom (xdisplay, "_SWITCH_SELECT_WINDOW",
 				       FALSE);
+
+    toolkit_action_atom		   =
+	XInternAtom (xdisplay, "_COMPIZ_TOOLKIT_ACTION", FALSE);
+    toolkit_action_main_menu_atom  =
+	XInternAtom (xdisplay, "_COMPIZ_TOOLKIT_ACTION_MAIN_MENU", FALSE);
+    toolkit_action_run_dialog_atom =
+	XInternAtom (xdisplay, "_COMPIZ_TOOLKIT_ACTION_RUN_DIALOG", FALSE);
+
+    panel_action_atom		 =
+	XInternAtom (xdisplay, "_GNOME_PANEL_ACTION", FALSE);
+    panel_action_main_menu_atom  =
+	XInternAtom (xdisplay, "_GNOME_PANEL_ACTION_MAIN_MENU", FALSE);
+    panel_action_run_dialog_atom =
+	XInternAtom (xdisplay, "_GNOME_PANEL_ACTION_RUN_DIALOG", FALSE);
 
     for (i = 0; i < 3; i++)
     {
